[package]
name = "racoon-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = "0.7.4"
async-trait = "0.1.73"
bytemuck = {version="1.13.1",features=["derive"]}
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
rand = "0.8.5"
wgpu = "0.17"
winit = "0.28.6"
gltf = {version="1.3", features=["utils"]}
glam = {version="0.24", features=["bytemuck","rand","serde","debug-glam-assert","std"]}
assets_manager = { version="0.10", features=["png","gltf","embedded"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.34"
web-sys = {version="0.3.64", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }


[features]
default = []
webgl = ["wgpu/webgl"]

